hero desktop done

--- a/src/index.html
+++ b/src/index.html
@@ -56,10 +56,11 @@
       <main>
          <picture>
             <source media="(min-width:600px)" srcset="./images/image-hero-desktop.png">
-            <img src="./images/image-hero-mobile.png" alt="man standing up typing on a">
+            <img src="./images/image-hero-mobile.png" alt="man standing up typing on a laptop">
          </picture>
          <section>
-            <h1>Make remote work</h1>
+            <h1>Make </h1>
+            <h1>remote work</h1>
             <p>Get your team in sync, no matter your location. Streamline processes, create team rituals, and watch productivity soar.</p>
             <button>Learn more</button>
             <footer>
