--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
       <title>snap</title>
    </head>
-   <body>
+   <body >
       <header>
          <div class="max-width">
             <div class="content-container">
@@ -27,14 +27,14 @@
 
                   <!-- nav-links -->
                   <ul class="nav-links">
-                     <li class="relative">
+                     <li class="relative link-grab">
                         <button class="link-btn">features</button>
                         <img src="./images/icon-arrow-down.svg" alt="down arrow" />
                         <div id="dropdown-features" class="dropdown-menu">
                            <!-- insert with js -->
                         </div>
                      </li>
-                     <li class="relative">
+                     <li class="relative link-grab">
                         <button class="link-btn">company</button>
                         <img src="./images/icon-arrow-down.svg" alt="down arrow" />
                         <div id="dropdown-company" class="dropdown-menu">
@@ -60,14 +60,14 @@
                   <img src="./images/icon-close-menu.svg" id="nav-menu" class="nav-menu" alt="menu" />
                </button>
                <ul class="sidebar-links">
-                  <li >
+                  <li  class="link-grab">
                      <button class="link-btn">features</button>
                      <img src="./images/icon-arrow-down.svg" alt="down arrow" />
                      <div id="dropdown-features" class="dropdown-menu">
                         <!-- insert with js -->
                      </div>
                   </li>
-                  <li >
+                  <li class="link-grab" >
                      <button class="link-btn">company</button>
                      <img src="./images/icon-arrow-down.svg" alt="down arrow" />
                      <div id="dropdown-company" class="dropdown-menu">
@@ -77,13 +77,13 @@
                   <li><a href="#">careers</a></li>
                   <li class="push-right"><a href="#">about</a></li>
                   <!-- registration -->
-                  <li><a href="#">login</a></li>
-                  <li><a href="#">register</a></li>
+                  <li class="move-middle"><a href="#">login</a></li>
+                  <li class="move-middle btn-sidebar"><a href="#">register</a></li>
                   <!-- registration end -->
                </ul>
             </aside>
          </div>
-         <aside class="submenu"></aside>
+        <div class="overlay"></div>
          <!-- mobile sidebar nav end -->
       </header>
 
